@@ -10,9 +10,13 @@ import com.sparta.spartastudykeep.entity.User;
 import com.sparta.spartastudykeep.repository.BoardRepository;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
+
+import com.sparta.spartastudykeep.security.UserDetailsImpl;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -25,37 +29,39 @@ public class BoardService {
     private final FriendshipService friendshipService;
 
     @Transactional
-    public BoardResponseDto saveBoard(BoardRequestDto boardRequestDto) {
+    public BoardResponseDto saveBoard(User user, BoardRequestDto boardRequestDto) {
+
         Board newBoard = new Board();
-        newBoard.setUser_name(boardRequestDto.getUser_name());
         newBoard.setBoard_title(boardRequestDto.getBoard_title());
         newBoard.setBoard_contents(boardRequestDto.getBoard_contents());
+        newBoard.setUser(user);
+        newBoard.setUser_name(user.getUsername());
 
         Board saveBoard = boardRepository.save(newBoard);
-
-        return new BoardResponseDto(saveBoard);
+        return new BoardResponseDto(saveBoard, user);
     }
 
-    public List<BoardGetTitleResponseDto> getAllBoard() {
-        List<Board> boardList = boardRepository.findAll();
+//    // 게시글 조회
+//    public List<BoardGetTitleResponseDto> getAllBoard() {
+//        List<Board> boardList = boardRepository.findAll();
+//
+//        List<BoardGetTitleResponseDto> dtoList = new ArrayList<>();
+//
+//        for (Board board : boardList) {
+//            BoardGetTitleResponseDto dto = new BoardGetTitleResponseDto(board.getBoard_title());
+//            dtoList.add(dto);
+//        }
+//        return dtoList;
+//    }
 
-        List<BoardGetTitleResponseDto> dtoList = new ArrayList<>();
-
-        for (Board board : boardList) {
-            BoardGetTitleResponseDto dto = new BoardGetTitleResponseDto(board.getBoard_title());
-            dtoList.add(dto);
-        }
-        return dtoList;
-    }
-
-    public BoardResponseDto getDetailBoard(Long boardId) {
+    public BoardResponseDto getDetailBoard(Long boardId, User user) {
         Board board = boardRepository.findById(boardId).orElseThrow(() -> new NullPointerException("ERROR!! 해당 게시글을 찾을 수 없습니다."));
             // Notfoundexception 로 바꿔주기, 일단 냅두기
-        return new BoardResponseDto(board);
+        return new BoardResponseDto(board, user);
     }
 
     @Transactional
-    public BoardResponseDto updateBoard(User user, Long boardId, BoardRequestDto boardRequestDto) {
+    public BoardResponseDto updateBoard(User user, String user_name, Long boardId, BoardRequestDto boardRequestDto) {
         Board board = boardRepository.findById(boardId).orElseThrow(() -> new NullPointerException("ERROR!! 해당 게시글을 찾을 수 없습니다."));
 
         // 현재 로그인한 유저와 작성한 유저가 다른 경우
@@ -69,7 +75,7 @@ public class BoardService {
         board.setBoard_contents(boardRequestDto.getBoard_contents());
 
         Board updatedBoard = boardRepository.save(board);
-        return new BoardResponseDto (updatedBoard);
+        return new BoardResponseDto (updatedBoard, user);
     }
 
     @Transactional
@@ -87,8 +93,11 @@ public class BoardService {
     public Page<NewsfeedDto> getNewsfeed(User user, Pageable pageable) {
 
         List<FriendResponseDto> friends = friendshipService.getFriendAll(user);
-        List<Long> ids = friends.stream().map(FriendResponseDto::getUserId).toList();
+        List<Long> ids = friends.stream().map(FriendResponseDto::getUserId).collect(Collectors.toList());
+        ids.add(user.getId());
+
         Page<Board> newsfeed = boardRepository.findAllByUserIdIn(ids, pageable);
+
 
         // 친구들이 작성한 글 목록 저장함
         return newsfeed.map(NewsfeedDto::new);
